Adicionado Mappings, Migrations, Repositorios e Controles da API

--- a/ArticleChallenge/ArticleChallenge.csproj
+++ b/ArticleChallenge/ArticleChallenge.csproj
@@ -12,4 +12,9 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ArticleChallenge.Application\ArticleChallenge.Application.csproj" />
+    <ProjectReference Include="..\ArticleChallenge.Data\ArticleChallenge.Data.csproj" />
+  </ItemGroup>
+
 </Project>
