Adicionado conexões com Azure

--- a/ArticleChallenge.API/appsettings.json
+++ b/ArticleChallenge.API/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectionSql": "Server=localhost\\SQLEXPRESS;Database=ArticleChallenge;Trusted_Connection=True;"
+    "ConnectionSql": "Server=tcp:articlechallenge.database.windows.net,1433;Initial Catalog=ArticleChallenge;Persist Security Info=False;User ID=dba;Password=3F4s95s#fk3#$01S34;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
